# thread_likecapture

./: .gitignore  AGENTS.md  UI_간소화_개선_요구사항.md  package-lock.json  package.json  startup.bat  tsconfig.json  글요약분석기_개념안.txt  글요약분석기_기능명세서.md  글요약분석기_기획서.md  글요약분석기_화면구성서.md  쓰레드캡쳐 개념안.txt  쓰레드캡쳐_기능명세서.md  쓰레드캡쳐_기획서.md  쓰레드캡쳐_화면구성서.md  프로젝트_상세_분석.md
app/: index.html  tsconfig.app.json  vite.config.ts
app/src/: main.tsx
app/src/app/: App.css  App.tsx
app/src/features/archive/: ArchivePanel.tsx
app/src/features/capture/: CapturePanel.tsx
app/src/features/report/: ReportPanel.tsx
app/src/features/settings/: SettingsPanel.tsx
app/src/lib/: api.ts  markdown.ts  pdf.ts
app/src/types/: models.ts
docs/: content-summary-analyzer_user-guide.html  thread-likecapture_user-guide.html  사용방법_안내.html
scripts/: generate-user-guide.mjs  startup.ps1  tauri-build.ps1  tauri-check.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs  models.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/gemini/: mod.rs
src-tauri/src/storage/: mod.rs
