[package]
name = "content-summary-analyzer"
version = "0.1.0"
description = "Personal document summary and analysis desktop app"
authors = ["content_summary_analyzer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.24.9"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.0.0", features = [] }
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
